Worked more on word embeddings page

--- a/wordembeddings.html
+++ b/wordembeddings.html
@@ -143,19 +143,29 @@
                 </p>
                     <div>
                 <p class="info"
-                   style="border: 1px solid black; padding-bottom: 25px; margin-left: 40px; margin-right: 40px">
+                   style="border: 1px solid black; padding-bottom: 0px; margin-left: 40px; margin-right: 40px">
                     <br>
-                    ‘Cat’ will be represented as a vector (2¦10)
-                    <br>
-                    ‘Dog’ will be represented as a vector (1¦10)
-                    <br>
-                    ‘Sun’ will be represented as a vector (10¦2)
+                    ‘Cat’ will be represented as a vector \begin{bmatrix}2\\10\end{bmatrix}
+                    ‘Dog’ will be represented as a vector \begin{bmatrix}1\\10\end{bmatrix}
+                    ‘Sun’ will be represented as a vector \begin{bmatrix}10\\2\end{bmatrix}
                     <br>
                 </p>
             </div>
             <br>
-            The dot product formula used to calculate the similarity of two vectors:
-            Cos θ=(A⋅B)/(|A||B|)
+                <p class="info">The dot product formula used to calculate the similarity of two vectors
+                    $$\cos \theta = \frac{u \cdot v}{\lvert \lvert u \rvert \lvert v \rvert}$$</p>
+                <br>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <img class="img-fluid" src="Content/Images/vectors.PNG"
+                             alt="Vectors"/>
+                    </div>
+                    <div class="col-sm-6">
+                        <img class="img-fluid" src="Content/Images/vectors2.PNG"
+                             alt="Vectors"/>
+                    </div>
+                </div>
+                <hr>
         </div>
         <br>
         <h4 id="teamTitle">OUR TEAM</h4>
