Home browsing ting

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             <h1></h1></div>
         <div class="middlepane">
             <div id="sectionMenuHolder">
+              <hr>
+              <p id="browsingTitle">Browse the Website</p>
                 <div class="container-fluid" id="sectionMenu">
                     <div class="row popup-gallery">
                         <div class="col-lg-6 col-sm-6 menuHolders">
