Basically finished wordembeddings

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                         Thailand.
                                         Currently, I am a PhD student in Computing at Imperial College London under the
                                         supervision of Professor Francesca Toni. You can find out more about me on my
-                                        personal page <a href="https://www.doc.ic.ac.uk/~pl1515/" id="piyaLink">here</a>.
+                                        personal page <a href="https://www.doc.ic.ac.uk/~pl1515/" class="piyaLink">here</a>.
                                     </p>
                                 </div>
                             </div>
