--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <p class="names">EDWARD WILLIAMS</p>
                     </div>
                     <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
+                        <img class="img-fluid rounded-circle us" src="Content/Images/jtb2918.png" alt="">
                         <p class="names">JAKUB BOBER</p>
                     </div>
                     <div class="col-sm-2 ourPics">
