--- a/explainnlp.html
+++ b/explainnlp.html
@@ -16,32 +16,33 @@
     <div class="pos-f-t" id="littleBar">
       <div class="collapse" id="navbarToggle">
         <div class="navbarContent">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-1"></div>
-                    <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
-                        <p class="names">KYLE PATEL</p>
-                    </div>
-                    <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/gl818.jpg" alt="">
-                        <p class="names">GIACOMO LA SCALA</p>
-                    </div>
-                    <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/ew4018.jpg" alt="">
-                        <p class="names">EDWARD WILLIAMS</p>
-                    </div>
-                    <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/jtb2918.png" alt="">
-                        <p class="names">JAKUB BOBER</p>
-                    </div>
-                    <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
-                        <p class="names">KEIGO</p>
-                    </div>
-                    <div class="col-sm-1"></div>
-                </div>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-sm-1"></div>
+              <div class="col-sm-2 pageLinks">
+                <a href="index.html">Home</a>
+              </div>
+              <div class="col-sm-2 pageLinks">
+                <a href="nlp.html"><img class="navBarImg" src="Content/Tiles/nlp.png"
+                                        alt="Natural Language Processing"/></a>
+              </div>
+              <div class="col-sm-2 pageLinks">
+                <a href="explainnlp.html"><img class="navBarImg" src="Content/Tiles/explaiNlp.png"
+                                               alt="Explainable Natural Language Processing"/></a>
+              </div>
+              <div class="col-sm-2 pageLinks">
+                <a href="wordembeddings.html"><img class="navBarImg" src="Content/Tiles/wordEmbed.png"
+                                                   alt="Word Embeddings"/></a>
+              </div>
+              <div class="col-sm-2 pageLinks">
+                <a href="interpwordembeddings.html"><img class="navBarImg"
+                                                         src="Content/Tiles/interpretWordEmbed.png"
+                                                         alt="Interpretable Word Embeddings"/></a>
+              </div>
+              <div class="col-sm-1"></div>
             </div>
+            <br>
+          </div>
         </div>
       </div>
       <nav class="navbar-default fixed-left" id="navbar">
@@ -117,8 +118,8 @@
             <p class="names">EDWARD WILLIAMS</p>
           </div>
           <div class="col-sm-2 ourPics">
-            <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
-            <p class="names">KUBAAAAAA</p>
+            <img class="img-fluid rounded-circle us" src="Content/Images/jtb2918.png" alt="">
+            <p class="names">JAKUB BOBER</p>
           </div>
           <div class="col-sm-2 ourPics">
             <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
