--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="row">
                     <div class="col-sm-1"></div>
                     <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/kp3118.JPG" alt="">
+                        <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
                         <p class="names">KYLE PATEL</p>
                     </div>
                     <div class="col-sm-2 ourPics">
