--- a/interpwordembeddings.html
+++ b/interpwordembeddings.html
@@ -118,8 +118,8 @@
             <p class="names">EDWARD WILLIAMS</p>
           </div>
           <div class="col-sm-2 ourPics">
-            <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
-            <p class="names">KUBAAAAAA</p>
+            <img class="img-fluid rounded-circle us" src="Content/Images/jtb2918.png" alt="">
+            <p class="names">JAKUB BOBER</p>
           </div>
           <div class="col-sm-2 ourPics">
             <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
