--- a/wordembeddings.html
+++ b/wordembeddings.html
@@ -22,7 +22,7 @@
                         <div class="row">
                             <div class="col-sm-1"></div>
                             <div class="col-sm-2 pageLinks">
-                                <a href="index.html">Home</a>
+                                <a href="index.html"><img class="navBarImg" src="Content/Tiles/home.png" alt="Home"/></a>
                             </div>
                             <div class="col-sm-2 pageLinks">
                                 <a href="nlp.html"><img class="navBarImg" src="Content/Tiles/nlp.png"
