--- a/explainnlp.html
+++ b/explainnlp.html
@@ -62,6 +62,15 @@
     <div class="leftpane">
       <h1></h1></div>
     <div class="middlepane">
+      <div class="progressBar">
+        <img src="Content/Tiles/nlp.png" class="highlightImage" id="nlp"/>
+        <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
+        <img src="Content/Tiles/wordEmbed.png" class="highlightImage" id="wordEmbed"/>
+        <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
+        <img src="Content/Tiles/explaiNlp.png" class="highlightImage currentPageProgressBar" id="explaiNlp"/>
+        <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
+        <img src="Content/Tiles/interpretWordEmbed.png" class="highlightImage" id="interpretWordEmbed"/>
+      </div>
       <div id="mainText">
         <hr>
         <div class="contentBox">
