Working progress bar

--- a/explainnlp.html
+++ b/explainnlp.html
@@ -63,30 +63,32 @@
       <h1></h1></div>
     <div class="middlepane">
       <div class="progressBar">
-        <img src="Content/Tiles/nlp.png" class="highlightImage" id="nlp"/>
+        <a href="nlp.html">
+          <img src="Content/Tiles/nlp.png" class="highlightImage" id="nlp"/>
+        </a>
         <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
-        <img src="Content/Tiles/wordEmbed.png" class="highlightImage" id="wordEmbed"/>
+        <a href="wordembeddings.html">
+          <img src="Content/Tiles/wordEmbed.png" class="highlightImage" id="wordEmbed"/>
+        </a>
         <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
-        <img src="Content/Tiles/explaiNlp.png" class="highlightImage currentPageProgressBar" id="explaiNlp"/>
+        <a href="explainnlp.html">
+          <img src="Content/Tiles/explaiNlp.png" class="highlightImage currentPageProgressBar" id="explaiNlp"/>
+        </a>
         <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
-        <img src="Content/Tiles/interpretWordEmbed.png" class="highlightImage" id="interpretWordEmbed"/>
+        <a href="interpwordembeddings.html">
+          <img src="Content/Tiles/interpretWordEmbed.png" class="highlightImage" id="interpretWordEmbed"/>
+        </a>
       </div>
       <div id="mainText">
         <hr>
         <div class="contentBox">
-          <img id="profilePic" src="https://www.doc.ic.ac.uk/~pl1515/images/Profile2.jpg"
-               alt="Profile Picture" class="imgResizeAndBorder img-fluid">
           <div id="aboutContent">
-            <h3 id="aboutHeading"><b>About me:</b></h3>
+            <h3 id="aboutHeading"><b>Explainable NLP</b></h3>
             <div class="container-fluid">
               <div class="row">
                 <div class="col-sm-12">
                   <p class="tab" id="aboutPiya">
-                    I am Piyawat Lertivittayakumjorn, you can call me ‘Peter’, and I am from
-                    Thailand.
-                    Currently, I am a PhD student in Computing at Imperial College London under the
-                    supervision of Professor Francesca Toni. You can find out more about me on my
-                    personal page <a href="https://www.doc.ic.ac.uk/~pl1515/" id="piyaLink">here</a>.
+                    Explainable NLP involves having the NLP system give justifications for its predictions. Current models for explainable NLP focus on justifying by interpreting the inputs and making connections between the inputs and outputs.
                   </p>
                 </div>
               </div>
