--- a/interpwordembeddings.html
+++ b/interpwordembeddings.html
@@ -63,13 +63,21 @@
       <h1></h1></div>
     <div class="middlepane">
       <div class="progressBar">
-        <img src="Content/Tiles/nlp.png" class="highlightImage" id="nlp"/>
+        <a href="nlp.html">
+          <img src="Content/Tiles/nlp.png" class="highlightImage" id="nlp"/>
+        </a>
         <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
-        <img src="Content/Tiles/wordEmbed.png" class="highlightImage" id="wordEmbed"/>
+        <a href="wordembeddings.html">
+          <img src="Content/Tiles/wordEmbed.png" class="highlightImage" id="wordEmbed"/>
+        </a>
         <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
-        <img src="Content/Tiles/explaiNlp.png" class="highlightImage" id="explaiNlp"/>
+        <a href="explainnlp.html">
+          <img src="Content/Tiles/explaiNlp.png" class="highlightImage" id="explaiNlp"/>
+        </a>
         <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
-        <img src="Content/Tiles/interpretWordEmbed.png" class="highlightImage currentPageProgressBar" id="interpretWordEmbed"/>
+        <a href="interpwordembeddings.html">
+          <img src="Content/Tiles/interpretWordEmbed.png" class="highlightImage currentPageProgressBar" id="interpretWordEmbed"/>
+        </a>
       </div>
       <div id="mainText">
         <hr>
