--- a/nlp.html
+++ b/nlp.html
@@ -119,51 +119,114 @@
                     interpretted speech. More technically, NLP systems understand Natural Language, execute requested
                     tasks and produce Natural Language
                 </p>
+                <br>
+                <section>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-xs-12 ">
+                                <nav>
+                                    <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
+                                        <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab"
+                                           href="#nav-home" role="tab" aria-controls="nav-home"
+                                           aria-selected="true">MOSTLY SOLVED</a>
+                                        <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab"
+                                           href="#nav-profile" role="tab" aria-controls="nav-profile"
+                                           aria-selected="false">MAKING
+                                            GOOD PROGRESS</a>
+                                        <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab"
+                                           href="#nav-contact" role="tab" aria-controls="nav-contact"
+                                           aria-selected="false">STILL
+                                            VERY HARD</a>
+                                    </div>
+                                </nav>
+                                <div class="tab-content py-4 px-4 px-sm-0" id="nav-tabContent">
+                                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
+                                         aria-labelledby="nav-home-tab">
+                                        <div class="row">
+                                            <div class="col-sm-4">
+                                                <img class="img-fluid" src="Content/Images/SpamDetection.PNG"
+                                                     alt="Spam Detection"/>
+                                            </div>
+                                            <div class="col-sm-4">
+                                                <img class="img-fluid" src="Content/Images/POS.PNG"
+                                                     alt="POS"/>
+                                            </div>
+                                            <div class="col-sm-4">
+                                                <img class="img-fluid" src="Content/Images/NameEntity.PNG"
+                                                     alt="Name Entity"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="nav-profile" role="tabpanel"
+                                         aria-labelledby="nav-profile-tab">
+                                        <div class="row">
+                                            <div class="col-sm-4">
+                                                <img class="img-fluid" src="Content/Images/SentimentAnalysis(1).png"
+                                                     alt="Spam Detection"/>
+                                            </div>
+                                            <div class="col-sm-4">
+                                                <img class="img-fluid" src="Content/Images/MachineTranslation.png"
+                                                     alt="POS"/>
+                                            </div>
+                                            <div class="col-sm-4">
+                                                <img class="img-fluid" src="Content/Images/InformationExtraction.png"
+                                                     alt="Name Entity"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="nav-contact" role="tabpanel"
+                                         aria-labelledby="nav-contact-tab">
+                                        <div class="row">
+                                            <div class="col-sm-4">
+                                                <img class="img-fluid" src="Content/Images/QuestionAnswering.png"
+                                                     alt="Spam Detection"/>
+                                            </div>
+                                            <div class="col-sm-4">
+                                                <img class="img-fluid" src="Content/Images/Paraphrasing.png"
+                                                     alt="POS"/>
+                                            </div>
+                                            <div class="col-sm-4">
+                                                <img class="img-fluid" src="Content/Images/Summarisation(1).png"
+                                                     alt="Name Entity"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <p class="info">
+                    Adapted from Prof. Dan Jurofsky's Work on NLP
+                </p>
                 <hr>
-                <h3 class="subheading"><b>MOSTLY SOLVED</b></h3><br>
+                <h4 id="teamTitle">OUR TEAM</h4>
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-lg-4">
-                            <img class="img-fluid" src="Content/Images/SpamDetection.PNG"
-                                 alt="Spam Detection"/>
+                        <div class="col-sm-1"></div>
+                        <div class="col-sm-2 ourPics">
+                            <img class="img-fluid rounded-circle us" src="Content/Images/kp3118.JPG" alt="">
+                            <p class="names">KYLE PATEL</p>
                         </div>
-                        <div class="col-lg-4">
-                            <img class="img-fluid" src="Content/Images/POS.PNG"
-                                 alt="POS"/>
+                        <div class="col-sm-2 ourPics">
+                            <img class="img-fluid rounded-circle us" src="Content/Images/gl818.jpg" alt="">
+                            <p class="names">GIACOMO LA SCALA</p>
                         </div>
-                        <div class="col-lg-4">
-                            <img class="img-fluid" src="Content/Images/NameEntity.PNG"
-                                 alt="Name Entity"/>
+                        <div class="col-sm-2 ourPics">
+                            <img class="img-fluid rounded-circle us" src="Content/Images/ew4018.jpg" alt="">
+                            <p class="names">EDWARD WILLIAMS</p>
                         </div>
+                        <div class="col-sm-2 ourPics">
+                            <img class="img-fluid rounded-circle us" src="Content/Images/jtb2918.png" alt="">
+                            <p class="names">JAKUB BOBER</p>
+                        </div>
+                        <div class="col-sm-2 ourPics">
+                            <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
+                            <p class="names">KEIGO</p>
+                        </div>
+                        <div class="col-sm-1"></div>
                     </div>
-                </div>
-            </div>
-
-            <h4 id="teamTitle">OUR TEAM</h4>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-1"></div>
-                    <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/kp3118.JPG" alt="">
-                        <p class="names">KYLE PATEL</p>
-                    </div>
-                    <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/gl818.jpg" alt="">
-                        <p class="names">GIACOMO LA SCALA</p>
-                    </div>
-                    <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/ew4018.jpg" alt="">
-                        <p class="names">EDWARD WILLIAMS</p>
-                    </div>
-                    <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/jtb2918.png" alt="">
-                        <p class="names">JAKUB BOBER</p>
-                    </div>
-                    <div class="col-sm-2 ourPics">
-                        <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
-                        <p class="names">KEIGO</p>
-                    </div>
-                    <div class="col-sm-1"></div>
                 </div>
             </div>
             <hr>
