--- a/interpwordembeddings.html
+++ b/interpwordembeddings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Project : Home</title>
+  <title>Project : Interpretable Word Embeddings</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="piyawatStyles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -50,7 +50,7 @@
           <div class="row" id="projectRow">
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
-              <a href="index.html" id="projectName">INTERPRETABLE WORD EMBEDDINGS</a>
+              <a href="index.html" id="projectName">INTERPRETABLE WORD EMBEDDINGS & EXPLAINABLE NLP</a>
             </div>
             <div class="col-sm-3"></div>
           </div>
