--- a/explainnlp.html
+++ b/explainnlp.html
@@ -141,19 +141,25 @@
                         paragraph, than the first. Here it would be useful information to see the ‘thought’ process
                         behind the NLP algorithm and see what the algorithm has learned from the text
                         <br><br>
-                        Adapted from https://thegradient.pub/frontiers-of-generalization-in-natural-language-processing/
+                        Adapted from: <a
+                            href="https://thegradient.pub/frontiers-of-generalization-in-natural-language-processing/"
+                            class="piyaLink">https://thegradient.pub/frontiers-of-generalization-in-natural-language-processing/</a>.
                     </p>
                 </div>
-                <br><hr><br>
+                <br>
+                <hr>
+                <br>
                 <p class="info">
                     Throughout the 1950s – 1990s during the time of language rules, extracting knowledge from the model
                     is very simple as one could just read the algorithm and use the rules within the algorithm. But with
-                    the current deep learning algorithms that use reinforced learning to generate new rules that were not
+                    the current deep learning algorithms that use reinforced learning to generate new rules that were
+                    not
                     specified within the original specification, it is not necessarily possible to extract the knowledge
                     the algorithm has learned
                     <br><br>
                     It is even predicted that in the future that the algorithms can write their own rules that may not
-                    necessarily be clear to humans. This leads onto exciting new insights into how language is formed and
+                    necessarily be clear to humans. This leads onto exciting new insights into how language is formed
+                    and
                     different interpretations are made by the addition of more text or the change of syntax
                 </p>
                 <br>
@@ -238,7 +244,6 @@
     })
 
     $(".menuHolders").mouseleave(function () {
-        $(this).stop(true);
         $(this).animate({"padding": "0px"});
     })
 
