--- a/wordembeddings.html
+++ b/wordembeddings.html
@@ -139,7 +139,7 @@
                     </div>
                     <br>
                     <p class="info">The dot product formula used to calculate the similarity of two vectors
-                        $$\cos \theta = \frac{u \cdot v}{\lvert \lvert u \rvert \lvert v \rvert}$$</p>
+                        $$\cos \theta = \frac{u \cdot v}{\lvert u \rvert \lvert v \rvert}$$</p>
                     <br>
                     <div class="container-fluid">
                         <div class="row">
