--- a/explainnlp.html
+++ b/explainnlp.html
@@ -65,11 +65,11 @@
         <div class="middlepane">
             <div class="progressBar">
                 <a href="nlp.html">
-                    <img src="Content/Tiles/nlp.png" class="highlightImage" id="nlp"/>
+                    <img src="Content/Tiles/nlp.png" class="highlightImage progressImgs" id="nlp"/>
                 </a>
                 <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
                 <a href="wordembeddings.html">
-                    <img src="Content/Tiles/wordEmbed.png" class="highlightImage" id="wordEmbed"/>
+                    <img src="Content/Tiles/wordEmbed.png" class="highlightImage progressImgs" id="wordEmbed"/>
                 </a>
                 <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
                 <a href="explainnlp.html">
@@ -78,7 +78,7 @@
                 </a>
                 <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
                 <a href="interpwordembeddings.html">
-                    <img src="Content/Tiles/interpretWordEmbed.png" class="highlightImage" id="interpretWordEmbed"/>
+                    <img src="Content/Tiles/interpretWordEmbed.png" class="highlightImage progressImgs" id="interpretWordEmbed"/>
                 </a>
             </div>
             <div id="mainText">
@@ -219,6 +219,13 @@
         $(this).animate({"opacity": "1"}, 100);
     })
     $(".us").mouseleave(function () {
+        $(this).animate({"opacity": "0.7"}, 100);
+    })
+
+    $(".progressImgs").mouseenter(function () {
+        $(this).animate({"opacity": "1"}, 100);
+    })
+    $(".progressImgs").mouseleave(function () {
         $(this).animate({"opacity": "0.7"}, 100);
     })
 
