--- a/interpwordembeddings.html
+++ b/interpwordembeddings.html
@@ -64,15 +64,15 @@
     <div class="middlepane">
       <div class="progressBar">
         <a href="nlp.html">
-          <img src="Content/Tiles/nlp.png" class="highlightImage" id="nlp"/>
+          <img src="Content/Tiles/nlp.png" class="highlightImage progressImgs" id="nlp"/>
         </a>
         <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
         <a href="wordembeddings.html">
-          <img src="Content/Tiles/wordEmbed.png" class="highlightImage" id="wordEmbed"/>
+          <img src="Content/Tiles/wordEmbed.png" class="highlightImage progressImgs" id="wordEmbed"/>
         </a>
         <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
         <a href="explainnlp.html">
-          <img src="Content/Tiles/explaiNlp.png" class="highlightImage" id="explaiNlp"/>
+          <img src="Content/Tiles/explaiNlp.png" class="highlightImage progressImgs" id="explaiNlp"/>
         </a>
         <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
         <a href="interpwordembeddings.html">
@@ -179,6 +179,13 @@
   })
   $(".us").mouseleave(function () {
     $(this).animate({"opacity": "0.7"}, 100);
+  })
+
+  $(".progressImgs").mouseenter(function () {
+      $(this).animate({"opacity": "1"}, 100);
+  })
+  $(".progressImgs").mouseleave(function () {
+      $(this).animate({"opacity": "0.7"}, 100);
   })
 
   $(".menuPics").mouseenter(function () {
