--- a/nlp.html
+++ b/nlp.html
@@ -71,15 +71,15 @@
               </a>
               <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
               <a href="wordembeddings.html">
-                <img src="Content/Tiles/wordEmbed.png" class="highlightImage" id="wordEmbed"/>
+                <img src="Content/Tiles/wordEmbed.png" class="highlightImage progressImgs" id="wordEmbed"/>
               </a>
               <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
               <a href="explainnlp.html">
-                <img src="Content/Tiles/explaiNlp.png" class="highlightImage" id="explaiNlp"/>
+                <img src="Content/Tiles/explaiNlp.png" class="highlightImage progressImgs" id="explaiNlp"/>
               </a>
               <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
               <a href="interpwordembeddings.html">
-                <img src="Content/Tiles/interpretWordEmbed.png" class="highlightImage" id="interpretWordEmbed"/>
+                <img src="Content/Tiles/interpretWordEmbed.png" class="highlightImage progressImgs" id="interpretWordEmbed"/>
               </a>
             </div>
             <div id="mainText">
@@ -279,6 +279,13 @@
         $(this).animate({"opacity": "1"}, 100);
     })
     $(".us").mouseleave(function () {
+        $(this).animate({"opacity": "0.7"}, 100);
+    })
+
+    $(".progressImgs").mouseenter(function () {
+        $(this).animate({"opacity": "1"}, 100);
+    })
+    $(".progressImgs").mouseleave(function () {
         $(this).animate({"opacity": "0.7"}, 100);
     })
 
