--- a/index.html
+++ b/index.html
@@ -20,25 +20,27 @@
                         <div class="row">
                             <div class="col-sm-1"></div>
                             <div class="col-sm-2 pageLinks">
-                                <a href="index.html"><img class="navBarImg" src="Content/Tiles/home.png" alt="Home"/></a>
+                                <a href="index.html"><img class="navBarImg" src="Content/Tiles/iconHome.png"
+                                    alt="Natural Language Processing"/></a>
                             </div>
                             <div class="col-sm-2 pageLinks">
-                                <a href="nlp.html"><img class="navBarImg" src="Content/Tiles/nlp.png"
+                                <a href="nlp.html"><img class="navBarImg" src="Content/Tiles/someBrain.png"
                                                         alt="Natural Language Processing"/></a>
                             </div>
                             <div class="col-sm-2 pageLinks">
-                                <a href="explainnlp.html"><img class="navBarImg" src="Content/Tiles/explaiNlp.png"
+                                <a href="explainnlp.html"><img class="navBarImg" src="Content/Tiles/someBrain2.png"
                                                                alt="Explainable Natural Language Processing"/></a>
                             </div>
                             <div class="col-sm-2 pageLinks">
-                                <a href="wordembeddings.html"><img class="navBarImg" src="Content/Tiles/wordEmbed.png"
+                                <a href="wordembeddings.html"><img class="navBarImg" src="Content/Tiles/iconWE.png"
                                                                    alt="Word Embeddings"/></a>
                             </div>
                             <div class="col-sm-2 pageLinks">
                                 <a href="interpwordembeddings.html"><img class="navBarImg"
-                                                                         src="Content/Tiles/interpretWordEmbed.png"
+                                                                         src="Content/Tiles/iconIWE.png"
                                                                          alt="Interpretable Word Embeddings"/></a>
                             </div>
+
                             <div class="col-sm-1"></div>
                         </div>
                         <br>
