Home + new icons

--- a/explainnlp.html
+++ b/explainnlp.html
@@ -15,36 +15,37 @@
     <div class="toppane">
         <div class="pos-f-t" id="littleBar">
             <div class="collapse" id="navbarToggle">
-                <div class="navbarContent">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-sm-1"></div>
-                            <div class="col-sm-2 pageLinks">
-                                <a href="index.html"><img class="navBarImg" src="Content/Tiles/home.png"
-                                                          alt="Home"/></a>
-                            </div>
-                            <div class="col-sm-2 pageLinks">
-                                <a href="nlp.html"><img class="navBarImg" src="Content/Tiles/nlp.png"
-                                                        alt="Natural Language Processing"/></a>
-                            </div>
-                            <div class="col-sm-2 pageLinks">
-                                <a href="explainnlp.html"><img class="navBarImg" src="Content/Tiles/explaiNlp.png"
-                                                               alt="Explainable Natural Language Processing"/></a>
-                            </div>
-                            <div class="col-sm-2 pageLinks">
-                                <a href="wordembeddings.html"><img class="navBarImg" src="Content/Tiles/wordEmbed.png"
-                                                                   alt="Word Embeddings"/></a>
-                            </div>
-                            <div class="col-sm-2 pageLinks">
-                                <a href="interpwordembeddings.html"><img class="navBarImg"
-                                                                         src="Content/Tiles/interpretWordEmbed.png"
-                                                                         alt="Interpretable Word Embeddings"/></a>
-                            </div>
-                            <div class="col-sm-1"></div>
-                        </div>
-                        <br>
-                    </div>
-                </div>
+              <div class="navbarContent">
+                  <div class="container-fluid">
+                      <div class="row">
+                          <div class="col-sm-1"></div>
+                          <div class="col-sm-2 pageLinks">
+                              <a href="index.html"><img class="navBarImg" src="Content/Tiles/iconHome.png"
+                                  alt="Natural Language Processing"/></a>
+                          </div>
+                          <div class="col-sm-2 pageLinks">
+                              <a href="nlp.html"><img class="navBarImg" src="Content/Tiles/someBrain.png"
+                                                      alt="Natural Language Processing"/></a>
+                          </div>
+                          <div class="col-sm-2 pageLinks">
+                              <a href="explainnlp.html"><img class="navBarImg" src="Content/Tiles/someBrain2.png"
+                                                             alt="Explainable Natural Language Processing"/></a>
+                          </div>
+                          <div class="col-sm-2 pageLinks">
+                              <a href="wordembeddings.html"><img class="navBarImg" src="Content/Tiles/iconWE.png"
+                                                                 alt="Word Embeddings"/></a>
+                          </div>
+                          <div class="col-sm-2 pageLinks">
+                              <a href="interpwordembeddings.html"><img class="navBarImg"
+                                                                       src="Content/Tiles/iconIWE.png"
+                                                                       alt="Interpretable Word Embeddings"/></a>
+                          </div>
+
+                          <div class="col-sm-1"></div>
+                      </div>
+                      <br>
+                  </div>
+              </div>
             </div>
             <nav class="navbar-default fixed-left" id="navbar">
                 <div class="container-fluid">
