--- a/index.html
+++ b/index.html
@@ -98,41 +98,38 @@
             </div>
             <div id="mainText">
                 <hr>
-                <div class="contentBox">
-                    <img id="profilePic" src="https://www.doc.ic.ac.uk/~pl1515/images/Profile2.jpg"
-                         alt="Profile Picture" class="imgResizeAndBorder img-fluid">
-                    <div id="aboutContent">
-                        <h3 id="aboutHeading"><b>About me:</b></h3>
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <p class="tab" id="aboutPiya">
-                                        I am Piyawat Lertivittayakumjorn, you can call me ‘Peter’, and I am from
-                                        Thailand.
-                                        Currently, I am a PhD student in Computing at Imperial College London under the
-                                        supervision of Professor Francesca Toni. You can find out more about me on my
-                                        personal page <a href="https://www.doc.ic.ac.uk/~pl1515/" class="piyaLink">here</a>.
-                                    </p>
-                                </div>
+                <h3 id="researchHeading"><b>Welcome!</b></h3>
+                <div id="researchParagraph">
+                  <p>This website aims to explore the topic of interpretable word embeddings and the use of it for explainable natural language processing (NLP).</p>
+                  <ul>
+                    <li>Interpretable word embeddings are representations of words that a machine can understand but can still be understood by a human.</li>
+                    <li>NLP or natural language processing is a program that can process natural languages humans use and run tasks given to process the language such as translation or word comprehension.</li>
+                  </ul>
+                  <p>
+                    A branch of NLP is explainable NLP that allows for information justifying the program’s actions to be retrieved. This information would then be used to fix the program if the results are not desirable or to create rules that can be implemented for similar tasks.
+                    This requires the use of interpretable word embeddings which are special forms of web embeddings that allow transparency of normal word embeddings by attaching context to the words such as grammar and use cases.
+                    In the other pages, these subtopics are further explored and explained.
+                  </p>
+                </p>
+                </div>
+              </div>
+            <hr>
+            <div class="contentBox">
+                <img id="profilePic" src="https://www.doc.ic.ac.uk/~pl1515/images/Profile2.jpg"
+                     alt="Profile Picture" class="imgResizeAndBorder img-fluid">
+                <div id="aboutContent">
+                    <h3 id="aboutHeading"><b>Piyawat Lertvittayakumjorn:</b></h3>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <p class="tab" id="aboutPiya">
+                                  Piyawat, ‘Peter’, is a PhD student in Computing at Imperial College London under the supervision of Professor Francesca Toni. His research is based in Natural Language Processing and Explainability in Deep NLP.
+                                  <br>For contacting or more specific information, his personal website can be found <a href="https://www.doc.ic.ac.uk/~pl1515/" class="piyaLink">here</a>.
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <hr>
-                <h3 id="researchHeading"><b>My Research:</b></h3>
-                <p class="tab" id="researchParagraph">
-                    I am currently researching on interpretable word embeddings that would be used for an explainable
-                    natural language processing (NLP) program. Interpretable word embeddings are representations of
-                    words in way that a machine learning algorithm can process but is still able to be understood by a
-                    human being. These words would still be associated by values, but these values represent the
-                    attributes of the words such as its grammar and context it is used in. An NLP is a program that can
-                    process natural languages humans use and run tasks given to process the language such as translation
-                    or word comprehension. However, with current implementations of NLP we cannot retrieve any
-                    information on how the program processes its tasks due to the nature of machine learning and deep
-                    learning. Thus, with the use of interpretable NLP we can pull this information that can justify the
-                    program’s actions and fix it if the results are not desirable. This data can also be used to create
-                    rules that can be implemented for similar tasks.
-                </p>
             </div>
             <hr>
             <h4 id="teamTitle">OUR TEAM</h4>
